<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".threeActivity">

    <TextView
        android:id="@+id/head2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/head2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subhead2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head2"
        android:layout_marginTop="-2dp"
        android:padding="@dimen/padding_regular"
        android:text="@string/subhead2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subhead2">

        <TextView
            android:id="@+id/isi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:padding="@dimen/padding_regular"
            android:text="@string/artikel2" />
    </ScrollView>

</RelativeLayout>